--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -29,3 +29,116 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+.channels {
+  font-size: 0.9em;
+}
+
+@font-face {
+  font-family: SatyrSP;
+  src: url(SatyrSP.otf);
+  font-weight: italic;
+}
+
+.logo {
+  color: #C60C30;
+  font-style: italic;
+  font-size: 4em;
+  font-family: SatyrSP;
+}
+
+.page {
+  margin-left: 3em;
+}
+
+.pfp {
+  border-radius: 100%;
+}
+
+.channel-link {
+  margin-left: 1em;
+  color: #C60C30;
+  font-size: 1.1em;
+}
+
+.channel-data {
+  margin-left: 5%;
+  color: black;
+  text-decoration: none;
+  text-align: right;
+}
+
+.channel-data:hover {
+  color: black;
+}
+
+.channel-type {
+  margin-left: 5%;
+  color: black;
+  text-decoration: none;
+}
+
+.add {
+  background-color: #C60C30;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  border-radius: 2%;
+}
+
+.lang {
+  background-color: #C60C30;
+  border: 2px solid #C60C30;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 2%;
+}
+
+.settings {
+  text-align: right;
+}
+
+[data-tab-content] {
+  display: none;
+}
+
+.active[data-tab-content] {
+  display: block;
+}
+
+.tabs {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid #C60C30;
+}
+
+.tab {
+  cursor: pointer;
+  padding: 10px;
+  border: 6px white solid;
+  color: #C60C30;
+}
+
+.tab.active {
+  background-color: #C60C30;
+  border: 6px #C60C30 solid;
+  color: white;
+}
+
+.tab:hover {
+  background-color: #C60C30;
+  border: 6px #C60C30 solid;
+  color: white;
+}
+
+.tab-content {
+}
